<resources>
    <string name="app_name">Diary</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="no_notes">No notes yet. Add your first note!</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="change_language">Change Language</string>
    <string name="note_title_hint">Enter note title</string>
    <string name="note_content_hint">Enter note content</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="bright">Bright</string>
    <string name="retro">Retro</string>
</resources>